<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="-65dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:paddingStart="@dimen/define_dimen_8"
        android:layout_toStartOf="@+id/layout_close"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:src="@drawable/ic_home"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_home" />

            <TextView
                android:id="@+id/tv_menu_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_home"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />
        </LinearLayout>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0.5dp"-->
        <!--            android:background="@color/white" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_allSong"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_all_song"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_all_song" />

            <TextView
                android:id="@+id/tv_menu_all_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_all_songs"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />
        </LinearLayout>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0.5dp"-->
        <!--            android:background="@color/white" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_futuredSong"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_featured_song"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_featured_song" />

            <TextView
                android:id="@+id/tv_menu_featured_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_featured_songs"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />
        </LinearLayout>


        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0.5dp"-->
        <!--            android:background="@color/white" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_popularSong"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_popular_song"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_popular_song" />

            <TextView
                android:id="@+id/tv_menu_popular_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_popular_songs"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />
        </LinearLayout>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0.5dp"-->
        <!--            android:background="@color/white" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_newSong"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_new_song"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_new_song" />

            <TextView
                android:id="@+id/tv_menu_new_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_new_songs"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_mylist"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_contact"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_contact" />

            <TextView
                android:id="@+id/tv_menu_mylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_my_playlist"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>
<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:background="@color/white" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_feedback"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_feedback"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_feedback" />

            <TextView
                android:id="@+id/tv_menu_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />
        </LinearLayout>



<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:background="@color/white" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_contact"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_contact"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_contact" />

            <TextView
                android:id="@+id/tv_menu_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_contact"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/ic_upload"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_upload"
                app:tint="@color/white"
                tools:srcCompat="@drawable/ic_upload" />

            <TextView
                android:id="@+id/tv_menu_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/define_dimen_14"
                android:text="@string/menu_upload"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_close"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/tran_parent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_12"
            android:src="@drawable/ic_close_white"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</RelativeLayout>
